# African-s-Research-Hub

./: package.json
backend/: .env.example  .gitignore  README.md  app.db  arh_backend.service  config.py  pyproject.toml  requirements.txt  requiremnts.txt  run.py  utilities.py
backend/app/: __init__.py  cleanup_fles.py  config.py  email_service.py  extensions.py  models.py  payment.py  routes.py
backend/app/templates/: email_confirmation.html  payment_confirmation.html
backend/app/templates/email/: password_reset.html
backend/app/utils/: email.py  tokens.py
backend/migrations/versions/: 03a89f23d4b3_new_fields_in_abstracts_table.py  2f964df6b9f2_users_table.py  45d0145f0b58_add_file_upload_support.py  a11af13a48cd_new_fields_in_users_table.py  fbde80a7c5c7_initial_migration.py
frontend/: README.md
frontend/src/Components/Abstract/: Abstract.jsx
frontend/src/Components/Hero/: Hero.css
frontend/src/Components/Navbar/: Navbar.css  Navbar.jsx
frontend/src/Components/Payment/: Payment.jsx
frontend/src/Components/Student/: Student.jsx
frontend/src/Pages/: MyDashboard.jsx  Payment.jsx  SubmitAbstract.jsx
public/: index.html
src/: App.js
src/Components/Abstract/: Abstract.css
src/Components/Hero/: Hero.jsx
src/Components/Student/: Student.css
