[project]
name = "ARH_backend"
version = "0.1.0"
description = "Back-end of the ARH (Africa Research Hub)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-login>=0.6.3",
    "flask-mail>=0.10.0",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "paychangu>=0.0.3",
    "python-dotenv>=1.1.1",
]
